Separated Partitions and JobArguments from Arguments